Bug 17680. Only need to add template builders on nodes that are more than -two- levels in from an overlay root. The first ply will be set up in nsXULDocument::OverlayForwardReference::Merge().